# WhisperDrop

./: .gitignore  CLAUDE.md  LICENSE  README.md  WhisperDrop.spec  meson.build  whisperdrop_gui.py  whisperdrop_gui_fixed.py
.github/workflows/: release.yml
data/: whisperdrop.css  whisperdrop.gresource.xml
installer/: embed_binary.py  meson.build  whisperdrop-installer.c  whisperdrop-uninstaller.c
src/: app.c  app.h  main.c  updater.c  updater.h  worker.c  worker.h
